test: test to run actions without secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,6 @@ spring.application.name=productsmanagement
 server.servlet.context-path=/api
 spring.rabbitmq.host=b-33bd6e0e-6889-4537-ad08-3bd21018e706.mq.us-east-1.amazonaws.com
 spring.rabbitmq.port=5671
-spring.rabbitmq.username=admin
-spring.rabbitmq.password=<AWS-AMQ-PASSWORD>
+spring.rabbitmq.username=${RABBITMQ_USER}
+spring.rabbitmq.password=${RABBITMQ_PASSWORD}
 spring.rabbitmq.ssl.enabled=true
