--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,15 +3,19 @@ server.servlet.context-path=/api
 
 spring.rabbitmq.host=b-33bd6e0e-6889-4537-ad08-3bd21018e706.mq.us-east-1.amazonaws.com
 spring.rabbitmq.port=5671
-spring.rabbitmq.username=${RABBITMQ_USER}
-spring.rabbitmq.password=${RABBITMQ_PASSWORD}
+spring.rabbitmq.username=admin
+spring.rabbitmq.password=Admin@123654
 spring.rabbitmq.ssl.enabled=true
 
-spring.datasource.url=${RDS_URL}
-spring.datasource.username=${RDS_USER}
-spring.datasource.password=${RDS_PASSWORD}
+spring.datasource.url=jdbc:mysql://productsdb.cbmwiee6shg9.us-east-1.rds.amazonaws.com:3306/productsdb
+spring.datasource.username=admin
+spring.datasource.password=admin123654
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.flyway.enabled=true
+spring.flyway.repairsql=true
+
