--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,7 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     needs: build
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
 
     steps:
       - name: Checkout code
@@ -89,6 +90,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     needs: upload
+    if: github.event_name == 'pull_request' && github.base_ref == 'main'
 
     steps:
       - name: Checkout code
